--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,12 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx build --push \
-            --tag shubhamtyagiio/poc:${{ steps.get_tag.outputs.TAG }} \
+            --tag shubhamtyagiio/poc:${{ steps.get_tag.output.TAG }} \
             --tag shubhamtyagiio/poc:latest \
-            --build-arg COMMIT_COUNT=${{ steps.get_commit_count.outputs.COMMIT_COUNT }} \
+            --build-arg COMMIT_COUNT=${{ steps.get_commit_count.output.COMMIT_COUNT }} \
             --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
             .
 
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push shubhamtyagiio/poc:${{ steps.get_tag.outputs.TAG }}
+          docker push shubhamtyagiio/poc:${{ steps.get_tag.output.TAG }}
           docker push shubhamtyagiio/poc:latest
