--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Get latest tag
         id: get_tag
-        run: echo "::set-output name=TAG::$(git describe --tags --abbrev=0)"
+        run: echo "::set-output name=TAG::$(git rev-parse HEAD)"
 
       - name: Get commit count
         id: get_commit_count
