--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           DOCKER_USERNAME: shubhamtyagiio
           DOCKER_PASSWORD: dckr_pat_co6WHeGEn_Q4mfcNDhtj3MHPQKc
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker buildx create --use
           docker buildx build --push \
