--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,6 @@ jobs:
             --build-arg COMMIT_COUNT=${COMMIT_COUNT} \
             --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
             .
-     
-      - name: Push Docker Image
-        env:
-          DOCKER_USERNAME: shubhamtyagiio
-          DOCKER_PASSWORD: dckr_pat_co6WHeGEn_Q4mfcNDhtj3MHPQKc
-          IMAGE_TAG: ${{ github.sha }}
-        run: docker push shubhamtyagiio/demo:${IMAGE_TAG}
+          docker images
+          echo 'shubhamtyagiio/demo:${IMAGE_TAG}'
+          docker push shubhamtyagiio/demo:${IMAGE_TAG}
