--- a/.github/workflows/build_deploy_docker_image.yml
+++ b/.github/workflows/build_deploy_docker_image.yml
@@ -1,9 +1,6 @@
 name: Build and Deploy
 on:
   push:
-    branches:
-      - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +21,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd ${APP_PATH}
+          cd /home/runner/work/poc
           npm install
 
       - name: Build Storybook
