--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -1,45 +1,34 @@
-name: Publish Docker Image
+name: Build and Deploy
 on:
-  workflow-dispatch:
-    inputs:
-      environement:
-        description: Type of environement
-        type: choice
-        required: true
-        default: dev
-        options:
-          - stg
-          -prd
-
+  push:
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-      - name: Get commit count
-        run: echo "COMMIT_COUNT=$(git rev-list ${{ github.sha }} --count)" >> $GITHUB_ENV
-
-      - name: docker login
+      - name: directory
         run: |
-          docker login -u shubhamtyagiio -p dckr_pat_co6WHeGEn_Q4mfcNDhtj3MHPQKc
+          pwd
+          echo "APP_PATH=$(pwd) >> $GITHUB_ENV"
 
-      - name: Build Docker Image
-        env:
-          DOCKER_USERNAME: shubhamtyagiio
-          DOCKER_PASSWORD: dckr_pat_co6WHeGEn_Q4mfcNDhtj3MHPQKc
-          IMAGE_TAG: ${{ github.sha }}
+      - name: Install Dependencies
         run: |
-          docker buildx create --use
-          docker buildx build --push \
-            --tag shubhamtyagiio/demo:${IMAGE_TAG} \
-            --build-arg COMMIT_COUNT=${COMMIT_COUNT} \
-            --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") \
-            .
+          npm install
 
+      - name: Build Storybook
+        run: npm run build-storybook
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: storybook-static
