--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,6 +46,7 @@ jobs:
   download:
   runs-on: ubuntu-latest
   needs: [fetch_repos, approval]
+  steps:
     - name: Download Artifacts
       uses: actions/download-artifact@v2
       with:
