--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,12 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy: 
       matrix: 
-        print: [${{github.event.inputs.organization_name}}]
+        print: ${{ split(inputs.organization_name, ',') }}
     steps:
       - name: echo
         shell: bash
           echo ${{ matrix.print }}
-          
+
       - name: Check out repository
         uses: actions/checkout@v3
 
