updated workflow test

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,7 +32,8 @@ jobs:
     steps:
       - name: echo
         shell: bash
-          echo ${{ matrix.print }}
+        run: |
+           echo ${{ matrix.print }}
 
       - name: Check out repository
         uses: actions/checkout@v3
