--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,10 +7,6 @@ on:
         description: 'Organization Name'
         required: true
         default: abc, pqr, xyz
-      archive_repo:
-        description: "repository archival"
-        type: boolean
-        default: false
 
 env: 
   archive_result: ${{github.event.inputs.archive_repo}}
@@ -32,6 +28,7 @@ jobs:
 
   fetch_repos:
     runs-on: ubuntu-latest
+    needs: [envPrepare]
     strategy: 
       matrix: 
         print: ${{fromJson(needs.envPrepare.outputs.repo_name)}}
@@ -40,38 +37,3 @@ jobs:
         shell: bash
         run: |
            echo ${{ matrix.print }}
-
-  #     - name: Check out repository
-  #       uses: actions/checkout@v3
-
-  #     - name: shell script
-  #       shell: bash
-  #       run: |
-  #         pwd > test.txt
-
-  #     - name: Upload Artifacts
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: my-artifacts
-  #         path: test.txt
-
-  # approval:
-  #   runs-on: ubuntu-latest
-  #   if: contains(needs.env.archive_result, 'true')
-  #   needs: [fetch_repos]
-  #   steps: 
-  #     - name: approval
-  #       shell: bash
-  #       run: |
-  #         echo "approval"
-
-  # download:
-  #   runs-on: ubuntu-latest
-  #   needs: [fetch_repos, approval]
-  #   steps:
-  #     - name: Download Artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: my-artifacts  
-  #         path: test.txt
-  
