--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,34 +6,30 @@ on:
       organization_name:
         description: 'Organization Name'
         required: true
-        default: abc, pqr, xyz
-
-env: 
-  archive_result: ${{github.event.inputs.archive_repo}}
+        default: "abc, pqr, xyz"
 
 jobs:
   envPrepare:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: prepare repo names to list
         id: step1
-        run: | 
-          echo -e 'outputtemp = list("${{ github.event.inputs.repo }}".split(","))\nprint ( "::set-output name=repo_name::", outputtemp )' | python
+        run: |
+          echo "::set-output name=repo_name::$(echo ${{ github.event.inputs.organization_name }} | tr ',' '\n')"
     outputs:
-      archive_result: ${{env.archive_result}}
-      repo_name: ${{ steps.step1.repo_name }}
+      archive_result: ${{ env.archive_result }}
+      repo_name: ${{ steps.step1.outputs.repo_name }}
 
   fetch_repos:
     runs-on: ubuntu-latest
     needs: [envPrepare]
-    strategy: 
-      matrix: 
+    strategy:
+      matrix:
         print: ${{fromJson(needs.envPrepare.outputs.repo_name)}}
     steps:
       - name: echo
-        shell: bash
         run: |
-           echo ${{ matrix.print }}
+          echo ${{ matrix.print }}
