--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,30 +6,19 @@ on:
       organization_name:
         description: 'Organization Name'
         required: true
-        default: "abc, pqr, xyz"
+        default: "["abc-dog-pc", "pqr-str", "prt-jg"]"
+
       archive_repo:
         description: "repository archival"
         type: boolean
         default: false
 
 jobs:
-  envPrepare:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-
-      - name: prepare repo names to list
-        id: step1
-        run: |
-          echo "::set-output name=repo_name::[$(echo ${{ github.event.inputs.organization_name }} | sed 's/,/\",\"/g')]"
-
   fetch_repos:
     runs-on: ubuntu-latest
-    needs: [envPrepare]
     strategy:
       matrix:
-        print: ${{fromJson(needs.envPrepare.outputs.repo_name)}}
+        print: ${ {github.event.inputs.organization_name }}
     steps:
       - name: echo
         run: |
