--- a/setup-maven/action.yml
+++ b/setup-maven/action.yml
@@ -28,7 +28,7 @@ runs:
       shell: bash
       run: |
         MAVEN_VERSION=${{ inputs.maven-version }}
-        wget https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz
+        wget https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz
         tar xzf apache-maven-${MAVEN_VERSION}-bin.tar.gz
         export PATH=$PWD/apache-maven-${MAVEN_VERSION}/bin:$PATH
         echo "Maven installed successfully"
