added gh token generation

--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Run python and shell script
         run: |
           chmod +x gh_token/script.sh
+          python gh_token/script.py key.pem 903110 50999118
           source ./gh_token/script.sh key.pem 903110 50999118
           echo "${{env.GITHUB_TOKEN}}"
         
