added gh token generation

--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -19,11 +19,19 @@ jobs:
         run: |
           echo "${{ vars.PRIV_KEY }}" > key.pem
         
-      - name: Run python and shell script
-        run: |
-          chmod +x gh_token/script.sh
-          python gh_token/script.py key.pem 903110 50999118
-          source ./gh_token/script.sh key.pem 903110 50999118
-          echo "${{env.GITHUB_TOKEN}}"
-          echo $GITHUB_TOKEN
-        
+      # - name: Run python and shell script
+      #   run: |
+      #     chmod +x gh_token/script.sh
+      #     python gh_token/script.py key.pem 903110 50999118
+      #     source ./gh_token/script.sh key.pem 903110 50999118
+      #     echo "${{env.GITHUB_TOKEN}}"
+      #     echo "$GITHUB_TOKEN
+
+    - name: Generate GitHub token
+      id: generate_token
+      run: |
+        TOKEN=$(python gh_token/script.py key.pem 12345 67890)
+        echo "::set-output name=GITHUB_TOKEN::$TOKEN"
+
+    - name: Print GitHub token (for debugging purposes)
+      run: echo "${{ steps.generate_token.outputs.GITHUB_TOKEN }}"
