--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -1,38 +1,21 @@
-name: GH Token Generator
-
-on:
-  push:
+name: Example Workflow
+on: [push]
 
 jobs:
-  token_generation:
+  build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: install dependency 
-        run: | 
-          pip install PyJWT requests
       
-      - name: Export and decode secret key
-        run: |
-          echo "${{ vars.PRIV_KEY }}" > key.pem
-          
-      - name: Generate GitHub token
+      - name: Generate GitHub Token
         id: generate_token
-        run: |
-          TOKEN=$(python gh_token/script.py key.pem 12345 67890)
-          echo "::set-output name=GITHUB_TOKEN::$TOKEN"
-  
-      - name: Print GitHub token (for debugging purposes)
-        run: echo "${{ steps.generate_token.outputs.GITHUB_TOKEN }}"
-        
-      # - name: Run python and shell script
-      #   run: |
-      #     chmod +x gh_token/script.sh
-      #     python gh_token/script.py key.pem 903110 50999118
-      #     source ./gh_token/script.sh key.pem 903110 50999118
-      #     echo "${{env.GITHUB_TOKEN}}"
-      #     echo "$GITHUB_TOKEN
-
+        uses: shubham-tyagi-io/poc/gh_token@main
+        with:
+          private_key: ${{ secrets.PRIV_KEY }}
+          app_id: 903110
+          installation_id: 50999118
+          
+      - name: Use GitHub Token
+        run: echo "GitHub Token: ${{ steps.generate_token.outputs.github_token }}"
