--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -22,5 +22,5 @@ jobs:
           
       - name: Store GitHub Token as Secret
         run: |
-          echo "GHS_TOKEN=${{ steps.generate_token.outputs.github_token }}" >> $GITHUB_ENV
+          echo "GHS_TOKEN=${{ steps.generate_token.outputs.token }}" >> $GITHUB_ENV
           echo "GHS_TOKEN=${{ env.GHS_TOKEN }}"
