--- a/gh_token/action.yml
+++ b/gh_token/action.yml
@@ -27,5 +27,5 @@ runs:
     - name: Store GitHub Token as Secret
       shell: bash
       run: |
-        echo "GHS_TOKEN=${{join(steps.generate_token.outputs.*)}}"
-        echo "GHS_TOKEN=${{join(steps.generate_token.outputs.*)}}" >> $GITHUB_ENV
+        echo "GHS_TOKEN=${{ steps.generate_token.outputs.stdout )}}"
+        echo "GHS_TOKEN=${{ steps.generate_token.outputs.stdout }}" >> $GITHUB_ENV
