--- a/gh_token/action.yml
+++ b/gh_token/action.yml
@@ -27,5 +27,5 @@ runs:
     - name: Store GitHub Token as Secret
       shell: bash
       run: |
-        echo "GHS_TOKEN=${{ steps.generate_token.outputs.*.* }}"
-        echo "GHS_TOKEN=${{ steps.generate_token.outputs.*.* }}" >> $GITHUB_ENV
+        echo "GHS_TOKEN=${{ steps.generate_token.outputs.Array.* }}"
+        echo "GHS_TOKEN=${{ steps.generate_token.outputs.Array.* }}" >> $GITHUB_ENV
