--- a/gh_token/action.yml
+++ b/gh_token/action.yml
@@ -26,7 +26,10 @@ runs:
 
     - name: Store GitHub Token as Secret
       shell: bash
+      id: generate_token_cat
       run: |
         cat token.txt
-        echo "GHS_TOKEN=${{ steps.generate_token.outputs.Array.* }}"
-        echo "GHS_TOKEN=${{ steps.generate_token.outputs.Array.* }}" >> $GITHUB_ENV
+        echo "GHS_TOKEN=${{ steps.generate_token_cat.outputs }}"
+        echo "GHS_TOKEN=${{ steps.generate_token_cat.outputs.token }}"
+        echo "GHS_TOKEN=${{ steps.generate_token_cat.outputs.* }}"
+        echo "GHS_TOKEN=${{ steps.generate_token_cat.outputs }}" >> $GITHUB_ENV
