updated github token generation

--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           cat token.txt
           export GHA_TOKEN=$(cat token.txt)
+          echo $GHA_TOKEN
 
       # - name: echo token
       #    shell: bash
