--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -31,7 +31,7 @@ jobs:
       - name: token test
         shell: bash
         run: |
-          curl -H "Authorization: token $GHA_TOKEN" https://api.github.com/user/repos
+          curl -H "Authorization: token '$GHA_TOKEN'" https://api.github.com/user/repos
 
 
       # - name: echo token
