updated github token generation

--- a/.github/workflows/gh_token_generator.yml
+++ b/.github/workflows/gh_token_generator.yml
@@ -31,7 +31,7 @@ jobs:
       - name: token test
         shell: bash
         run: |
-          python gh_token/test.py ${{env.GHA_TOKEN}} shubham-tyagi-io
+          python gh_token/test.py $(echo $GHA_TOKEN) shubham-tyagi-io
 
       # - name: echo token
       #    shell: bash
